--- a/package.json
+++ b/package.json
@@ -2,17 +2,15 @@
   "name": "name_of_the_package",
   "version": "0.0.0",
   "description": "",
-  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc"
+    "build": "tsc",
+    "start": "npm run build && node ./build/server.js"
   },
   "repository": {
     "type": "git",
     "url": ""
   },
-  "author": "",
-  "license": "",
   "dependencies": {
     "typescript": "^3"
   }
