--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: '3.7'
 services:
   app:
     image: 'node'
-    working_dir: '/app'
+    working_dir: '/hostdir'
     volumes:
-      - './:/app'
+      - './:/hostdir'
     ports:
       - '3000:3000'
-    command: bash -c 'npm install && npm start'
+    command: bash -c 'npm install && npm run build && npm start'
