--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "knight-log": "^1"
     },
     "devDependencies": {
+        "@tsconfig/node16": "^1",
         "@types/chai": "^4",
         "@types/mocha": "^9",
         "@types/node": "^16",
@@ -21,8 +22,10 @@
         "@typescript-eslint/parser": "^5",
         "chai": "^4",
         "eslint": "^8",
+        "install": "^0.13.0",
         "mocha": "^10",
+        "npm": "^8.17.0",
         "ts-node": "^8",
-        "typescript": "^3"
+        "typescript": "^4"
     }
 }
